--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "framer-motion": "^11.9.0",
+    "i18next": "^24.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.3",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
